# video-to-transcript

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTES.md  README.md  backfill_transcription.py  build-all-images.yaml  docker-compose.api.yml  get_folder_id.py  google_drive_handler.py  k8s  pyproject.toml  run_working_tests.py  setup_drive_webhook.py  setup_google_credentials.py  setup_secret.sh  test-build.yaml  transcribe.py  transcribe_drive.py
.github/: CICD.md  setup-workload-identity.sh
.github/workflows/: deploy-terraform.yml  deploy-worker.yml  deploy.yml  pr-checks.yml
api/: __init__.py
api/gateway/: Dockerfile  config.py  main.py  requirements.txt
api/orchestration-api/: Dockerfile  config.py  dependencies.py  main.py  requirements.txt
api/orchestration-api/routers/: __init__.py  batch.py  health.py  jobs.py  runners.py
api/schemas/: orchestration-api.yaml  transcription-api.yaml  webhook-api.yaml
api/transcription-api/: Dockerfile  config.py  dependencies.py  main.py  models.py  requirements.txt
api/transcription-api/routers/: __init__.py  health.py  jobs.py  providers.py  transcription.py
api/webhook-api/: Dockerfile  config.py  dependencies.py  main.py
api/webhook-api/routers/: __init__.py  admin.py  cursors.py  health.py  tracking.py  webhooks.py
cli/: __init__.py  backfill.py  check_dropbox.py  config_manager.py  debug_handler.py  generate_refresh_token.py  pyproject.toml  setup_gmail_secret.py  upload_test_file.py
cloud_run_job/: Dockerfile  main.py  requirements.txt
data/: README.md
deploy/: README.md
deploy/docker/: docker-compose.yml
deploy/docker/compose/: dev.yml  production.yml
deploy/docker/images/api/: gateway.Dockerfile  orchestration-api.Dockerfile  transcription-api.Dockerfile  webhook-api.Dockerfile
deploy/helm/argo-workflows/: values.yaml
deploy/helm/argocd/: values.yaml
deploy/helm/minio/: values.yaml
deploy/helm/postgresql/: values.yaml
deploy/infrastructure/terraform/environments/dev/: .terraform.lock.hcl  dev.tfvars  main.tf  moved.tf  outputs.tf  providers.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  terraform.tfvars.example  variables.tf
deploy/kubernetes/: GITOPS.md  README.md  build-images.sh  deploy.sh
deploy/kubernetes/argocd/: transcripts-app.yaml
deploy/kubernetes/base/: kustomization.yaml  namespaces.yaml
deploy/kubernetes/base/gitops/: argocd-applications.yaml  ci-workflow.yaml  image-updater.yaml  kustomization.yaml
deploy/kubernetes/base/infrastructure/: kustomization.yaml
deploy/kubernetes/base/infrastructure/argo-workflows/: argo-server.yaml  kustomization.yaml  namespace.yaml  workflow-controller.yaml  workflow-rbac.yaml  workflow-templates.yaml
deploy/kubernetes/base/infrastructure/argocd/: argocd-application-controller.yaml  argocd-configmaps.yaml  argocd-dex-server.yaml  argocd-rbac.yaml  argocd-redis.yaml  argocd-repo-server.yaml  argocd-server.yaml  kustomization.yaml  namespace.yaml  workflow-controller.yaml
deploy/kubernetes/base/infrastructure/flux/: git-repository.yaml  kustomization.yaml  namespace.yaml  source-controller.yaml
deploy/kubernetes/base/ingress/: argo-workflows-ingress.yaml  argocd-ingress.yaml  kustomization.yaml  minio-ingress.yaml  nginx-ingress.yaml
deploy/kubernetes/environments/local/: kustomization.yaml  local-secrets.yaml  local-storage.yaml
deploy/kubernetes/workflows/: build-and-push.yaml  ci-trigger.yaml
deploy/scripts/: deploy.sh  helm-deploy-simple.sh  helm-deploy.sh  port-forwards.sh
downloader/: CHANGELOG.md  README.md  list_recordings.py  main.py  requirements-dev.txt  requirements.txt
downloader/tests/: __init__.py
drive_webhook/: main.py  requirements.txt
examples/: config_example.py  fastapi_example.py  webhook_example.py
requirements/: dev.txt  prod.txt
scripts/: generate_fastapi.py  generate_summary_email.py  validate_timestamps.py
services/: __init__.py
services/config/: __init__.py  factory.py  settings.py  validator.py
services/core/: __init__.py  exceptions.py  interfaces.py  logging.py  models.py  resilience.py
services/orchestration/: __init__.py  service.py
services/orchestration/runners/: __init__.py  cloudrun.py  local.py
services/security/: __init__.py  auth.py
services/storage/: __init__.py  service.py
services/storage/providers/: __init__.py  dropbox.py  gcs.py  local.py
services/transcription/: __init__.py  service.py
services/transcription/providers/: __init__.py  openai.py
services/webhook/: __init__.py  cursors.py  service.py  tracking.py
services/webhook/handlers/: __init__.py  dropbox.py
templates/: transcript_template.json  transcript_template.txt
terraform/: DEPLOYMENT.md  README.md  cloud_run_job.tf  drive_webhook.tf  dropbox_main.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: __init__.py  test_runner.py
tests/api/: __init__.py  conftest.py  test_gateway.py  test_orchestration_api.py  test_transcription_api.py  test_webhook_api.py
tests/services/: __init__.py  test_config.py  test_storage.py  test_transcription.py
webhook/: CHANGELOG.md  Dockerfile  Makefile  README.md  main.py  main_new.py  pyproject.toml  requirements.txt
webhook_storage/webhook/: cursors.json  processed_jobs.json
worker/: CHANGELOG.md  Dockerfile  Makefile  README.md  email_preview.html  email_preview.txt  legacy_adapter.py  main.py  pyproject.toml  pytest.ini  requirements.txt  terraform.tfstate
worker/scripts/: generate_summary_email.py
worker/src/transcripts/: __init__.py  config.py
worker/src/transcripts/core/: __init__.py  audio_chunker.py  audio_processor.py  dropbox_auth.py  dropbox_handler.py  html_email_template.py  notifications.py  summary_formatter.py  topic_analyzer.py  transcription.py
worker/src/transcripts/utils/: __init__.py  timestamp_formatter.py
worker/tests/integration/: __init__.py  test_topic_summarization_e2e.py
worker/tests/smoke/: test_api_keys.py  test_gcp_secrets.py  test_pipeline_e2e.py
worker/tests/unit/: __init__.py  test_timestamp_formatter.py
(+42 files in other folders)
