[project]
name = "transcripts"
version = "0.1.0"
description = "Audio/Video transcription using OpenAI Whisper API"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "ffmpeg-python>=0.2.0",
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.0.0",
    "google-cloud-pubsub>=2.0.0",
    "pytest>=8.0.0",
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]