[project]
name = "transcripts-cli"
version = "0.1.0"
description = "CLI tools for transcription pipeline"
dependencies = [
    "dropbox>=12.0.2",
    "python-dotenv>=1.0.0",
    "click>=8.0.0",
    "openai>=1.0.0",
    "ffmpeg-python>=0.2.0",
    "requests>=2.25.0",
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]