[project]
name = "transcripts-worker"
version = "0.1.0"
description = "Worker service for audio/video transcription"
dependencies = [
    "openai>=1.0.0",
    "litellm>=1.0.0",
    "python-dotenv>=1.0.0",
    "ffmpeg-python>=0.2.0",
    "dropbox>=12.0.0",
    "google-cloud-secret-manager>=2.0.0",
    "google-cloud-storage>=2.0.0",
    "sentry-sdk>=1.40.0",
    "pytest>=8.0.0",
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transcripts"]